<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ArtistInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/artistIv"
            tools:src="@drawable/ic_launcher_background"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/artistNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Hello"
            android:layout_marginHorizontal="16dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/artistIv"
            app:layout_constraintTop_toTopOf="@+id/artistIv" />

        <TextView
            android:id="@+id/playCountNoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="350K"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="@+id/playCountTextTv"
            app:layout_constraintBottom_toTopOf="@+id/playCountTextTv"
            app:layout_constraintEnd_toEndOf="@+id/playCountTextTv" />

        <TextView
            android:id="@+id/playCountTextTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playcount"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/artistIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/followersTextTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/artistIv" />

        <TextView
            android:id="@+id/followersNoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="350K"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="@+id/followersTextTv"
            app:layout_constraintBottom_toTopOf="@+id/followersTextTv"
            app:layout_constraintEnd_toEndOf="@+id/followersTextTv" />

        <TextView
            android:id="@+id/followersTextTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/artistIv"
            app:layout_constraintStart_toEndOf="@+id/playCountTextTv"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genreRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/artistIv" />

        <TextView
            android:id="@+id/albumDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Hello"
            android:autoLink="web"
            android:linksClickable="true"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genreRv" />

        <TextView
            android:id="@+id/trackTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/top_tracks"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumDescriptionTv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/trackTv" />


        <TextView
            android:id="@+id/albumTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_albums"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trackRv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/albumTv" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingPb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="playCountTextTv,followersTextTv,trackTv,albumTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>